20.6.2013 git
- further improving dynamic listbox capabilities with Javascript and AJAX

19.6.2013 git
- deltasql pyclient written in Python can now use either MySQLdb or Oracle's mysql.connector as data connection layer to connect to MySQL database. 
  Users need to configure the variable pydbadapter in config.ini to choose their preferred connector.
- initial experiments with dynamic entries in synchronization form dbsync.php  

5.6.2013 web
- patch 1 for Cancel Search link on navigation bar for 1.6.1 released

28.5.2013 git
- Cancel search button moved on the navigation bar

10.5.2013 git
- deltasql.tex compiles with miktex
- added Latest Changelog link to main site

8.5.2013 git
- cleanup: moving graphdata scripts into graphdata subfolder

*******************************
1.6.1 Release Notes (10.5.2013)
 
  New features:  navigation bar on the left for faster switch between pages
                                  
  Fixes:         Copy&Paste works also in Internet Explorer
  
  Known Issues:  Copy&Paste link disappears after being clicked once
                 
  Documentation: one new FAQ entry on why deltasql is so different from commercial tools. 
                 New webpage is part of the package in web subfolder
                  
*******************************

2.5.2013 git
- added donations page with paypal and bitcoin address

30.4.2013 git
- fixing install routine (some undefined variables in head.inc.php while installing)
- fixing an error in the newly generated configuration script

27.4.2013 git
- added one FAQ entries on why deltasql is so cool :-D

26.4.2013 git
- ZeroClipboard works now even in IE, but for some reason the link disappears after it was clicked

25.4.2013 git
- added colors to tables
- tried another way to do copy paste (which does not work)
- upgrading zeroClipboard library to 1.1.7

23.4.2013 git
- minor improvements to navigation
- TODO: understand why copy & paste does not work

22.4.2013 git